--- a/src/style.css
+++ b/src/style.css
@@ -1,8 +1,7 @@
 body {
   color: #efe1e3;
   background-color: rgb(14 20 24);
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
-    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .container {
@@ -16,6 +15,8 @@ header {
   background-size: cover;
   text-align: center;
   padding: 130px;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
 header h1 {
   font-weight: 700;
@@ -48,9 +49,36 @@ header a {
   color: rgb(58, 58, 145);
   border-radius: 3px;
 }
+main {
+  padding: 20px;
+}
+main img {
+  display: block;
+  margin: 0 auto;
+  margin-top: 20px;
+  max-width: 100%;
+}
+main h2 {
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.5;
+}
+main p {
+  font-size: 13px;
+  line-height: 1.3;
+  opacity: 0.7;
+}
+main .grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 20px !important;
+}
+section {
+}
 .grid {
   display: grid;
   grid-template-columns: 1fr 2fr 2fr;
+  grid-gap: 50px !important;
 }
 footer {
   margin-top: 20px;
