--- a/src/style.css
+++ b/src/style.css
@@ -8,6 +8,9 @@ body {
   max-width: 1400px;
   margin: 0 auto;
 }
+.text-center {
+  text-align: center;
+}
 header {
   background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
     url("../src/palm-trees-pink.jpg");
@@ -56,7 +59,7 @@ main img {
   display: block;
   margin: 0 auto;
   margin-top: 20px;
-  max-width: 100%;
+  width: 100%;
 }
 main h2 {
   font-weight: 700;
@@ -79,6 +82,11 @@ main .grid {
   grid-template-columns: 1fr 1fr;
   grid-gap: 40px !important;
 }
+.second img {
+  width: 100%;
+  aspect-ratio: 1 / 1;
+  margin: 0 auto;
+}
 .grid {
   display: grid;
   grid-template-columns: 1fr 2fr 2fr;
@@ -88,7 +96,14 @@ section .hot-spots {
   grid-template-columns: 1fr 1fr 1fr;
   grid-gap: 10px !important;
 }
-
+.card-header {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+.embed {
+  width: 100%;
+  aspect-ratio: 1 / 1;
+}
 .la-spots {
   display: block;
   margin: 0 auto;
@@ -116,6 +131,13 @@ section .hot-spots {
 
   display: block;
   margin: 0 auto;
+}
+section .gallery {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+}
+.insta {
+  max-width: 200px;
 }
 footer {
   margin-top: 20px;
@@ -158,6 +180,8 @@ footer a {
   }
   header h3 {
     font-size: 15px;
+  }
+  .embed {
   }
   footer h4 {
     font-size: 14px;
