--- a/src/style.css
+++ b/src/style.css
@@ -5,7 +5,6 @@ body {
 }
 
 .container {
-  max-width: 1400px;
   margin: 0 auto;
 }
 .text-center {
@@ -40,7 +39,7 @@ header h3 {
   line-height: 1.5;
 }
 header a {
-  font-weight: 700;
+  font-weight: 500;
   font-size: 14px;
   line-height: 1.5;
   text-align: center;
@@ -49,7 +48,7 @@ header a {
   padding: 15px;
   margin-bottom: 20px;
   text-decoration: none;
-  color: rgb(39 155 194);
+  color: #831b04;
   border-radius: 3px;
 }
 main {
@@ -63,12 +62,12 @@ main img {
 }
 main h2 {
   font-weight: 700;
-  font-size: 16px;
+  font-size: 20px;
   line-height: 1.5;
 }
-main p {
-  font-size: 13px;
-  line-height: 1.3;
+p {
+  font-size: 14px;
+  line-height: 1.5;
   opacity: 0.8;
 }
 
@@ -94,7 +93,8 @@ main .grid {
 section .hot-spots {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  grid-gap: 10px !important;
+  grid-gap: 15px !important;
+  margin: 0 35px 35px 35px;
 }
 .card-header {
   display: grid;
@@ -108,15 +108,16 @@ section .hot-spots {
   display: block;
   margin: 0 auto;
   text-align: center !important;
+  padding-top: 30px;
 }
 .second {
-  background-color: rgb(34, 19, 13);
+  background-color: rgb(121 111 109);
+  padding: 0;
 }
 .card {
   background-color: rgb(7 2 0);
   margin: 30px 0;
   padding: 10px;
-  border-radius: 5px;
 }
 .btn {
   padding: 10px;
@@ -127,8 +128,7 @@ section .hot-spots {
   letter-spacing: 3px;
   background-color: #efe1e3;
   text-decoration: none;
-  color: rgb(39 155 194);
-
+  color: #831b04;
   display: block;
   margin: 0 auto;
 }
@@ -137,15 +137,15 @@ section .gallery {
   grid-template-columns: 1fr 1fr 1fr;
 }
 .insta {
-  max-width: 200px;
+  max-width: 100%;
 }
 footer {
   margin-top: 20px;
-
-  background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)),
+  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
     url("../src/hollywood-sign-behind.jpg");
   background-repeat: no-repeat;
   background-size: cover;
+  color: #efefef;
 }
 footer h4 {
   font-weight: 700;
@@ -166,7 +166,7 @@ footer li {
   list-style: none;
 }
 footer a {
-  color: #efe1e3;
+  color: #efefef;
 }
 @media (max-width: 960px) {
   header {
@@ -181,9 +181,10 @@ footer a {
   header h3 {
     font-size: 15px;
   }
-  section .hot-spots {
-    display: block;
+  .grid {
+    grid-template-columns: 1fr !important;
   }
+
   .card-header {
     display: block;
     margin: 0 auto;
@@ -194,6 +195,7 @@ footer a {
   .embed {
     aspect-ratio: 16 / 9;
   }
+
   footer h4 {
     font-size: 14px;
     font-weight: 500;
